# vcpkg-gdal-issue

./: CMakeLists.txt  CMakeSettings.json  README.md  example.cpp  makefile
